fix(reactapp): fix base z-index issue

--- a/app/packages/partup-client-react/react/src/index.scss
+++ b/app/packages/partup-client-react/react/src/index.scss
@@ -6,7 +6,8 @@
     }
 
     &--root {
-        z-index: 1
+        position: relative;
+        z-index: 0;
     }
 
     &--portal {
